--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     </p>
   
   <div class="stats-columns">
-    <div class="columns">
+    <div class="columns1">
       <h2>10k+</h2>
       <p>COMPANIES</p>
     </div>
-    <div class="columns">
+    <div class="columns2">
       <h2>314</h2>
       <p>TEMPLATES</p>
     </div>
-    <div class="columns">
+    <div class="columns3">
       <h2>12m+</h2>
       <p>QUERIES</p>
     </div>
